--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -1,20 +1,13 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginTop="0.5dp"
-    app:cardBackgroundColor="#FFFFFF">
+    android:layout_marginTop="0.5dp">
 
     <RelativeLayout
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
-
-        <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp">-->
 
         <LinearLayout
             android:id="@+id/indicator2"
@@ -89,4 +82,4 @@
         <!--</android.support.v7.widget.CardView>-->
 
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</RelativeLayout>
