--- a/app/src/main/res/layout/filter_search.xml
+++ b/app/src/main/res/layout/filter_search.xml
@@ -368,7 +368,7 @@
                         android:paddingTop="@dimen/activity_vertical_margin"
                         android:visibility="gone"
 
-                        ></com.nascenia.biyeta.view.MyGridView>
+                        />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -405,7 +405,7 @@
                         android:paddingTop="@dimen/activity_vertical_margin"
                         android:visibility="gone"
 
-                        ></com.nascenia.biyeta.view.MyGridView>
+                        />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -416,7 +416,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
-                android:text="Search"
+                android:text="@string/search"
                 android:textColor="#ffffff" />
 
 
