--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group  >
 
         <item
             android:id="@+id/nav_profile"
@@ -18,7 +18,7 @@
 
 
     <item android:title="@string/other">
-            <menu android:checkableBehavior="single">
+            <menu  >
 
 
                 <item
