--- a/app/src/main/res/layout/common_user_profile_item.xml
+++ b/app/src/main/res/layout/common_user_profile_item.xml
@@ -47,6 +47,8 @@
 
                 <TextView
                     android:id="@+id/user_name"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
