--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -30,6 +30,8 @@
                 <item
                     android:id="@+id/nav_faq"
                     android:title="@string/nav_faq" />
+                <item android:id="@+id/nav_policy"
+                    android:title="@string/nav_policy"/>
                 <item
                     android:id="@+id/nav_termsofuse"
                     android:title="@string/nav_termsofuse" />
