--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -13,7 +13,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/r1"
         android:layout_marginBottom="@dimen/adverisement_item_layout_head_margin"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:visibility="invisible">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -648,7 +649,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-
             android:textColor="#FF00FF" />
     </LinearLayout>
 
