--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -71,7 +71,8 @@
                     android:layout_height="match_parent"
                     android:background="#ffffff"
                     android:gravity="center"
-                    android:hint="@string/email"/>
+                    android:hint="@string/email"
+                    android:text="qamehedi@gmail.com"/>
             </android.support.v7.widget.CardView>
 
 
@@ -97,7 +98,8 @@
                     android:background="#ffffff"
                     android:gravity="center"
                     android:hint="@string/password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:text="12345678"/>
             </android.support.v7.widget.CardView>
 
 
