--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -66,6 +66,7 @@
                             android:layout_width="@dimen/small_image_size"
                             android:layout_height="@dimen/small_image_size"
                             android:layout_alignParentRight="true"
+                            android:layout_marginRight="@dimen/small_margin"
                             android:src="@drawable/favourite" />
 
 
