--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -94,12 +94,15 @@
         </LinearLayout>
 
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_below="@id/ll_contact_container"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:id="@+id/ll_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_contact_container"
-            android:layout_margin="10dp"
 
             android:orientation="vertical"
             android:paddingLeft="10dp">
@@ -131,6 +134,7 @@
                 android:textColor="@color/contact_footer_text" />
 
         </LinearLayout>
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
 
 </ScrollView>
