--- a/app/src/main/res/layout/faq.xml
+++ b/app/src/main/res/layout/faq.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-    <ExpandableListView
-        android:id="@+id/expandableListView"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">-->
+
+
+<RelativeLayout android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="@dimen/medium_padding"
+    android:layout_marginRight="20dp"
+
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@color/devider"
-        android:layout_margin="10dp"
-        android:padding="10dp">
+        android:layout_above="@+id/faq_foot"
+        android:id="@+id/recylcer_list"/>
 
-    </ExpandableListView>
-        <TextView
+    <TextView
+        android:id="@+id/faq_foot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="15dp"
+        android:paddingLeft="5dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/faq_foot"
+        android:textColor="#000" />
 
-            android:id="@+id/faq_foot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/expandableListView"
-            android:text="@string/faq_foot"
-            android:textColor="#000" />
-
-    </LinearLayout>
-
-
-
-</ScrollView>
+</RelativeLayout>
