--- a/app/src/main/res/layout/list_item_faq.xml
+++ b/app/src/main/res/layout/list_item_faq.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
+    android:id="@+id/rl_list_item"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="5dp">
+
     <TextView
         android:id="@+id/bullet_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:text="@string/bullet_point"
         android:textColor="@android:color/black"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"  />
+        android:textSize="10sp"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/expandedListItem"
-        android:layout_toRightOf="@id/bullet_point"
-        android:layout_alignBaseline="@id/bullet_point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:layout_alignBaseline="@id/bullet_point"
+        android:layout_toRightOf="@id/bullet_point"
+        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp" />
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
