--- a/app/src/main/res/layout/contact_page.xml
+++ b/app/src/main/res/layout/contact_page.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/accountrecharge_backGround_color">
 
     <RelativeLayout
         android:id="@+id/rl_contact"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/accountrecharge_backGround_color">
+        android:layout_height="wrap_content">
 
 
         <LinearLayout
