--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -7,14 +7,15 @@
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:buttonTint="@color/colorPrimary" />
+
     <TextView
         android:id="@+id/title"
-        android:lines="1"
-        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:lines="1"
         android:text="Hello"
-        android:textStyle="bold"/>
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
 </LinearLayout>
