--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card="http://schemas.android.com/tools"
+    android:id="@+id/communtication_request_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e9ebed">
@@ -654,3 +659,12 @@
     </LinearLayout>
 
 </RelativeLayout>
+    <TextView
+        android:id="@+id/no_data"
+        android:layout_width="match_parent"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/no_request_from_me"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_height="match_parent" />
+    </FrameLayout>
