--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -49,9 +49,9 @@
         android:id="@+id/empty_message"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="No request found"
+        android:text="কোন অনুরোধ নেই"
         android:textSize="20sp"
         android:layout_below="@+id/simpleProgressBar"
     android:textColor="@color/colorPrimaryDark"/>
