fix the issue of search_filter

--- a/app/src/main/res/layout/activity_main_actionbar_item.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_item.xml
@@ -23,8 +23,8 @@
         android:paddingTop="@dimen/small_padding"
         android:paddingBottom="@dimen/small_padding"
         android:id="@+id/search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
         android:paddingLeft="@dimen/medium_margin"
@@ -35,8 +35,8 @@
     <LinearLayout
         android:paddingTop="@dimen/small_padding"
         android:paddingBottom="@dimen/small_padding"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_toLeftOf="@+id/profile"
         android:layout_toRightOf="@+id/search"
         android:gravity="center"
@@ -86,8 +86,8 @@
         android:paddingTop="@dimen/small_padding"
         android:paddingBottom="@dimen/small_padding"
         android:id="@+id/profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
         android:paddingRight="@dimen/medium_margin"
