--- a/app/src/main/res/layout/inbox_view.xml
+++ b/app/src/main/res/layout/inbox_view.xml
@@ -7,7 +7,7 @@
         android:id="@+id/empty_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Your inbox is empty"
+        android:text="কোন মেসেজ নেই"
         android:textSize="25sp"
         android:gravity="center"
         android:visibility="gone"
