--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card="http://schemas.android.com/tools"
+<RelativeLayout
+
     android:id="@+id/communtication_request_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
