--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-<RelativeLayout
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/communtication_request_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e9ebed">
+    android:background="#e9ebed"
+    android:fitsSystemWindows="true">
 
 
     <android.support.design.widget.CoordinatorLayout
@@ -658,7 +654,6 @@
             android:textColor="#FF00FF" />
     </LinearLayout>
 
-</RelativeLayout>
     <TextView
         android:id="@+id/no_data"
         android:layout_width="match_parent"
@@ -667,4 +662,6 @@
         android:gravity="center"
         android:visibility="gone"
         android:layout_height="match_parent" />
-    </FrameLayout>
+
+</RelativeLayout>
+
