change text color and set bangla title name of profession recylerview

--- a/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
+++ b/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="title textview :"
-            android:textColor="#e6e6e9"
+            android:textColor="@color/title_textview_item_color"
             android:textSize="@dimen/medium_textsize" />
 
         <TextView
