--- a/app/src/main/res/layout/activity_send_request.xml
+++ b/app/src/main/res/layout/activity_send_request.xml
@@ -4,25 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".activity.SendRequestActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".activity.SendRequestActivity">
 
     <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="#FFFFFF"-->
-        <!--android:minHeight="?attr/actionBarSize">-->
+    <!--android:id="@+id/toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:background="#FFFFFF"-->
+    <!--android:minHeight="?attr/actionBarSize">-->
 
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="আপনাকে পাঠানো অনুরোধ"-->
-            <!--android:textAlignment="center"-->
-            <!--android:textColor="#F44336"-->
-            <!--android:textSize="@dimen/medium_textsize"-->
-            <!--android:textStyle="bold" />-->
+    <!--<TextView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="আপনাকে পাঠানো অনুরোধ"-->
+    <!--android:textAlignment="center"-->
+    <!--android:textColor="#F44336"-->
+    <!--android:textSize="@dimen/medium_textsize"-->
+    <!--android:textStyle="bold" />-->
 
 
     <!--</android.support.v7.widget.Toolbar>-->
@@ -38,11 +38,11 @@
         app:tabMode="fixed" />
 
 
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:orientation="vertical" />
 
 
