--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -6,12 +6,6 @@
     android:background="@drawable/card_background"
     android:orientation="vertical">
 
-    <!-- <android.support.v7.widget.CardView
-         android:id="@+id/card_view"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         card_view:cardCornerRadius="4dp">-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +24,7 @@
             android:layout_marginLeft="@dimen/large_margin"
             android:layout_weight="1"
             android:text=""
-            android:textColor="#e6e6e9"
+            android:textColor="@color/title_textview_item_color"
             android:textSize="@dimen/item_textsize"
             android:textStyle="normal" />
 
