--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -67,6 +67,10 @@
                     android:background="#ffffff"
                     android:gravity="center"
                     android:hint="@string/email"
+                    android:imeOptions="actionNext"
+                    android:nextFocusForward="@+id/login_password"
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:text="qamehedi@gmail.com" />
             </android.support.v7.widget.CardView>
 
