--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -3,31 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
 
+        android:id="@+id/title_custom_toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:id="@+id/title_custom_toolbar"
-        android:text="my Title"
-
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:text=""
         android:textColor="@color/white"
-
         android:textSize="18sp" />
 
     <ImageView
+        android:id="@+id/back"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/back"
-        android:layout_alignParentTop="true"
-        android:tint="@color/white"
         android:layout_alignParentLeft="true"
-        android:id="@+id/back"
-
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentTop="true"
+        android:src="@drawable/back_arrow"
+
+        android:tint="@color/white" />
 
 </RelativeLayout>
