--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -89,7 +89,7 @@
                              android:layout_height="@dimen/small_image_size"
                              android:layout_alignParentRight="true"
                              android:paddingRight="@dimen/small_padding"
-                             android:src="@drawable/favourite" />-->
+                             android:src="@drawable/favorite" />-->
 
                         <ImageView
                             android:id="@+id/edit_profile_image"
@@ -146,7 +146,7 @@
                             android:layout_width="@dimen/small_image_size"
                             android:layout_height="@dimen/small_image_size"
                             android:layout_alignParentRight="true"
-                            android:src="@drawable/favourite" />
+                            android:src="@drawable/favorite" />
                     </RelativeLayout>
 
                 </android.support.v7.widget.Toolbar>
