login issue fixed

--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e9ebed">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
     <android.support.design.widget.CoordinatorLayout
@@ -681,6 +684,7 @@
 
 
     </RelativeLayout>
+        </RelativeLayout>
 
 
 </RelativeLayout>
