--- a/app/src/main/res/layout/list_item_expire.xml
+++ b/app/src/main/res/layout/list_item_expire.xml
@@ -79,6 +79,7 @@
                         android:layout_height="match_parent"
                         android:textColor="#440b0a0a"
                         android:text="7 fev '17"
+                        android:gravity="right"
                         android:textSize="8sp"
                         android:tint="@color/colorPrimaryDark"
                         android:layout_toRightOf="@+id/user_name"/>
