--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,7 +25,8 @@
         android:id="@+id/displayname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="katy perry"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="bottom"
@@ -40,7 +41,6 @@
         android:layout_width="@dimen/profile_width"
         android:layout_height="@dimen/profile_height"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/profile_icon_female"
 
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
