--- a/app/src/main/res/layout/custom_tab_item1.xml
+++ b/app/src/main/res/layout/custom_tab_item1.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:orientation="horizontal">
 
     <RelativeLayout
@@ -13,15 +14,15 @@
             android:id="@+id/biodata_notification_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/text_tab"
             android:background="@drawable/badge_item_count"
             android:gravity="center"
             android:text="0"
             android:textColor="#000"
             android:textSize="8sp"
             android:textStyle="bold"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
 
         <TextView
@@ -30,7 +31,6 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/small_margin"
-            android:layout_toLeftOf="@+id/badge_notification_4"
             android:paddingRight="@dimen/small_padding"
             android:text="বায়োডাটা"
             android:textColor="#FF353333"
