--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -586,7 +586,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#BDBDBD"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/cancel_imageview"
@@ -658,7 +658,7 @@
         android:text="@string/no_request_from_me"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/medium_textsize"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
 </RelativeLayout>
 
