--- a/app/src/main/res/layout/fragment_communication_request.xml
+++ b/app/src/main/res/layout/fragment_communication_request.xml
@@ -586,7 +586,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#BDBDBD"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/cancel_imageview"
