--- a/app/src/main/res/layout/expire_connection.xml
+++ b/app/src/main/res/layout/expire_connection.xml
@@ -25,13 +25,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/expire_message"/>
+            android:text="@string/expire_message"
+            android:paddingBottom="20dp"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="কোন অনুরোধ নেই"
         android:id="@+id/empty_message"
         android:gravity="center"
