--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -45,16 +45,17 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="visible" />
+
     <TextView
         android:id="@+id/empty_message"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/simpleProgressBar"
         android:gravity="center"
         android:text="কোন অনুরোধ নেই"
-        android:textSize="20sp"
-        android:layout_below="@+id/simpleProgressBar"
-    android:textColor="@color/colorPrimaryDark"/>
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp"
+        android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/communication_profile_list"
