--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -592,7 +592,7 @@
                                 android:id="@+id/match_user_choice_recyclerView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/small_margin"
+                                android:layout_marginLeft="@dimen/large_margin"
                                 android:layout_marginRight="@dimen/small_margin"
                                 android:layout_marginTop="@dimen/medium_margin"
                                 android:scrollbars="vertical" />
