--- a/app/src/main/res/layout/inbox_view.xml
+++ b/app/src/main/res/layout/inbox_view.xml
@@ -8,10 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="কোন মেসেজ নেই"
-        android:textSize="25sp"
+        android:textSize="14sp"
         android:gravity="center"
         android:visibility="gone"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:textColor="@color/colorPrimary"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/all_message_thread"
