--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -206,26 +206,38 @@
                             android:layout_weight="1"
                             android:background="#cecece"
                             android:gravity="center"
-                            android:orientation="horizontal"
-                            android:paddingLeft="15dp"
-                            android:paddingRight="15dp">
+                            android:orientation="horizontal">
 
-                            <ImageView
-                                android:id="@+id/emoIconImage"
+                            <RelativeLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:padding="@dimen/smiley_icon_padding"
-                                android:src="@drawable/smile" />
+                                android:gravity="center">
 
-                            <TextView
-                                android:id="@+id/sendEmoIconTextTag"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="হাসি পাঠান"
-                                android:textSize="@dimen/small_textsize"
-                                android:textStyle="bold" />
+                                <ImageView
+                                    android:id="@+id/emoIconImage"
+                                    android:layout_width="@dimen/margin_terms_subSubTopic"
+                                    android:layout_height="@dimen/margin_terms_subSubTopic"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_centerInParent="true"
+                                    android:layout_marginRight="@dimen/small_margin"
+                                    android:src="@drawable/smile" />
+
+                                <TextView
+                                    android:id="@+id/sendEmoIconTextTag"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerInParent="true"
+                                    android:layout_marginLeft="@dimen/small_margin"
+                                    android:layout_toRightOf="@+id/emoIconImage"
+                                    android:text="@string/send_smile"
+                                    android:textSize="12sp"
+                                    android:textStyle="bold" />
+
+
+                            </RelativeLayout>
+
+
                         </LinearLayout>
 
 
