--- a/app/src/main/res/layout/list_profile_details_parent_item.xml
+++ b/app/src/main/res/layout/list_profile_details_parent_item.xml
@@ -16,7 +16,7 @@
             android:layout_below="@+id/relativeParent"
             android:background="@color/without_expand_color"
             android:orientation="horizontal"
-            android:visibility="visible">
+            android:visibility="gone">
 
         </LinearLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_marginRight="@dimen/medium_margin"
                 android:background="#000000"
                 android:orientation="horizontal"
-                android:visibility="visible"></LinearLayout>
+                android:visibility="gone"></LinearLayout>
 
 
         </RelativeLayout>
