--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -45,10 +45,12 @@
     <LinearLayout
         android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:background="#E0E0E0"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/large_margin"
+        android:layout_marginRight="@dimen/large_margin"
+        android:background="#eeeeee"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
     </LinearLayout>
     <!-- </android.support.v7.widget.CardView> E0E0E0-->
