--- a/app/src/main/res/layout/general_information_recylerview_item.xml
+++ b/app/src/main/res/layout/general_information_recylerview_item.xml
@@ -19,12 +19,12 @@
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_alignLeft="@+id/title_value_textview"
-        android:layout_alignStart="@+id/title_value_textview"
         android:layout_below="@+id/title_imageView"
-        android:layout_marginRight="@dimen/large_margin"
+        android:layout_marginRight="@dimen/small_margin"
         android:layout_marginTop="@dimen/large_margin"
-        android:background="#eeeeee" />
+        android:background="#eeeeee"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/title_imageView"
